# f-simple

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  context.cpp  context.h  demo1.toy  demo2.toy  demo3.toy  demo4.toy  demo5.toy  errors.cpp  errors.h  function.cpp  function.h  main.cpp  parser  parser.cpp  parser.h  parser.y  predefined_functions.cpp  predefined_functions.h  scanner.cpp  semantic.cpp  semantic.h
demos/: demo1.toy  demo2.toy  demo3.toy  demo4.toy  demo5.toy  demo6.toy
